Aggiornati menu, footer, testi

--- a/altra_economia.html
+++ b/altra_economia.html
@@ -83,27 +83,34 @@
 
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <div class="container">
-          <ul class="nav navbar-nav dropdown">
-                    <li >
+    <ul class="nav navbar-nav dropdown">
+                    <li>
                         <a href="./index.html">Home</a>
                     </li>
                     <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Proposte
+                        <a class="dropdown-toggle"  data-toggle="dropdown" href="#">Proposte
                         <span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li><a href="./fisco_finanza.html">Fisco e finanza</a></li>
-                                <li ><a href="./lavoro_reddito.html">Lavoro e reddito</a></li>
+                                <li><a href="./lavoro_reddito.html">Lavoro e reddito</a></li>
                                 <li><a href="./cultura_conoscenza.html">Cultura e conoscenza</a></li>
                                 <li><a href="./ambiente.html">Ambiente e Sviluppo sostenibile</a></li>
                                 <li><a href="./welfare.html">Welfare e diritti</a></li>
                                 <li><a href="./pace_disarmo_cooperazione.html">Cooperazione, pace, disarmo</a></li>
-                                <li class="active"><a href="./altra_economia.html">Altraeconomia</a></li>
-								<li><a href="./tutte.html">Tutte le proposte</a></li> 								
+                                <li><a href="./altra_economia.html">Altraeconomia</a></li> 
                             </ul>
                     <li>
-                        <a href="./infografiche.html">Infografiche</a>
+                        <a href="./infografica.html">Infografica</a>
+<li>
+                        <a href="./analisi_e_dati.html">Analisi e dati</a>
+                    </li>                    </li>
+
                     </li>
-                    </li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+         <li>
+          <a href="http://Sbilanciamoci.org" target="_blank">Sbilanciamoci.org </a>
+        </li>
         </ul>
   </div>
 </div>
@@ -123,9 +130,17 @@
             <i class="fa fa-lightbulb-o fa-stack-1x fa-inverse"></i>
           </span> 
           Altra economia</h1></div><br>
-          <p class="lead">Sostenere e valorizzare l’economia sociale e solidale. Anche quest’anno nel Ddl di Stabilità non si presta attenzione a quelle forme e pratiche di economia sociale e solidale fondate sulla conversione ecologica e sociale dei territori e sulla critica all’attuale modello di sviluppo. Nell’economia sociale e solidale si possono classificare esperienze ormai storiche come l’agricoltura biologica, i gruppi di acquisto solidale, le botteghe del commercio equo e solidale, gli orti urbani, le tante realtà della finanza etica, della promozione culturale, del riciclo e del riuso, del turismo responsabile, del recupero e risparmio energetico, della mobilità sostenibile. Ma vanno annoverate anche esperienze più recenti, come le imprese recuperate e gli spazi sociali e culturali che animano nuovi modelli aperti di altra economia, formazione, ricerca, informazione. Per promuovere e valorizzare queste pratiche e forme resilienti di economia sociale e solidale, Sbilanciamoci! propone di investire circa 250 milioni di euro. Tali risorse sono destinate in particolare a istituire tre Fondi specifici (rispettivamente, per il commercio equo e solidale, per l’economia solidale, per la riconversione ecologica delle imprese), a implementare due Piani strategici nazionali (per la piccola distribuzione organizzata e la certificazione partecipata della qualità dei prodotti biologici), a sostenere una rete nazionale di mercati e fiere eco&eque, a implementare una ricognizione delle aree dismesse di proprietà pubblica o di quelle abbandonate dai privati per un’eventuale ri-assegnazione a fini sociali. Inoltre, Sbilanciamoci! richiede un investimento pubblico sugli Open Data capace di imprimere una svolta in direzione della garanzia della trasparenza istituzionale, della promozione dell’innovazione sociale e della partecipazione civica.
+          <p class="lead"><strong>Sostenere e valorizzare l’economia sociale e solidale.</strong> Anche quest’anno nel Ddl di Stabilità non si presta attenzione a quelle forme e pratiche di economia sociale e solidale fondate sulla conversione ecologica e sociale dei territori e sulla critica all’attuale modello di sviluppo. Nell’economia sociale e solidale si possono classificare esperienze ormai storiche come l’agricoltura biologica, i gruppi di acquisto solidale, le botteghe del commercio equo e solidale, gli orti urbani, le tante realtà della finanza etica, della promozione culturale, del riciclo e del riuso, del turismo responsabile, del recupero e risparmio energetico, della mobilità sostenibile. Ma vanno annoverate anche esperienze più recenti, come le imprese recuperate e gli spazi sociali e culturali che animano nuovi modelli aperti di altra economia, formazione, ricerca, informazione. Per promuovere e valorizzare queste pratiche e forme resilienti di economia sociale e solidale, Sbilanciamoci! propone di investire circa 250 milioni di euro. Tali risorse sono destinate in particolare a istituire tre Fondi specifici (rispettivamente, per il commercio equo e solidale, per l’economia solidale, per la riconversione ecologica delle imprese), a implementare due Piani strategici nazionali (per la piccola distribuzione organizzata e la certificazione partecipata della qualità dei prodotti biologici), a sostenere una rete nazionale di mercati e fiere eco&eque, a implementare una ricognizione delle aree dismesse di proprietà pubblica o di quelle abbandonate dai privati per un’eventuale ri-assegnazione a fini sociali. Inoltre, Sbilanciamoci! richiede un investimento pubblico sugli Open Data capace di imprimere una svolta in direzione della garanzia della trasparenza istituzionale, della promozione dell’innovazione sociale e della partecipazione civica.
+
           </p>
           </div>
+ <div id="scaricatab">
+                <!-- <span class="fa-stack">
+                <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                <i class="fa fa-balance-scale fa-stack-1x fa-inverse"></i></span></h1> -->
+                <!-- <a href="#"><img src="./img/scarica_sbilanciamoci.png"></a> -->
+                <a href="/rapporto2016/altra_economia.pdf" style="text-decoration: none" class="scarica">Scarica la sezione del Rapporto su Altra economia</a>
+            </div>   
         </div>
 
       </div>    
@@ -174,11 +189,13 @@
    </div>
 
    <hr>
-   <footer>
+<footer>
  <p class="text-center" >
-  <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Licenza Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a> <span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Il Rapporto <i>Come usare la spesa pubblica per i diritti, la pace e l’ambiente</i> è un progetto di</span> <a xmlns:cc="http://creativecommons.org/ns#" href="http://sbilanciamoci.org" property="cc:attributionName" rel="cc:attributionURL"> <img src="http://www.sbilanciamoci.org/images/logo.gif" style="height: 25px;" /></a>. Questo sito è stato realizzato e donato da <a href="http://ondata.it" target><img src="./img/logo_onData.png" style="height: 15px;" /></a>. <br>I contenuti sono distrubiti con Licenza <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribuzione - Condividi allo stesso modo 4.0 Internazionale</a>.
+  <span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Il Rapporto <i>Come usare la spesa pubblica per i diritti, la pace e l’ambiente</i> è un progetto di</span> <a xmlns:cc="http://creativecommons.org/ns#" href="http://sbilanciamoci.org" property="cc:attributionName" rel="cc:attributionURL"> <img src="http://www.sbilanciamoci.org/images/logo.gif" style="height: 25px;" /></a>.
+Questo sito è stato realizzato e donato da <a href="http://ondata.it" target><img src="./img/logo_onData.png" style="height: 15px;" /></a>.  </p><p class="text-center" ><a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img class="alignleft" alt="Licenza Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a> I contenuti sono distrubiti con Licenza <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribuzione - Condividi allo stesso modo 4.0 Internazionale</a>.
 </p>
 </footer>
+
 
 </div>
 <script>
