--- a/ambiente.html
+++ b/ambiente.html
@@ -83,29 +83,35 @@
 
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <div class="container">
-          <ul class="nav navbar-nav dropdown">
-                    <li >
+              <ul class="nav navbar-nav dropdown">
+                    <li>
                         <a href="./index.html">Home</a>
                     </li>
                     <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Proposte
+                        <a class="dropdown-toggle"  data-toggle="dropdown" href="#">Proposte
                         <span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li><a href="./fisco_finanza.html">Fisco e finanza</a></li>
                                 <li><a href="./lavoro_reddito.html">Lavoro e reddito</a></li>
                                 <li><a href="./cultura_conoscenza.html">Cultura e conoscenza</a></li>
-                                <li class="active"><a href="./ambiente.html">Ambiente e Sviluppo sostenibile</a></li>
+                                <li><a href="./ambiente.html">Ambiente e Sviluppo sostenibile</a></li>
                                 <li><a href="./welfare.html">Welfare e diritti</a></li>
                                 <li><a href="./pace_disarmo_cooperazione.html">Cooperazione, pace, disarmo</a></li>
                                 <li><a href="./altra_economia.html">Altraeconomia</a></li> 
-								<li><a href="./tutte.html">Tutte le proposte</a></li> 
                             </ul>
                     <li>
-                        <a href="./infografiche.html">Infografiche</a>
-                    </li>
+                        <a href="./infografica.html">Infografica</a>
+<li>
+                        <a href="./analisi_e_dati.html">Analisi e dati</a>
+                    </li>                    </li>
+
                     </li>
         </ul>
-  </div>
+        <ul class="nav navbar-nav navbar-right">
+         <li>
+          <a href="http://Sbilanciamoci.org" target="_blank">Sbilanciamoci.org </a>
+        </li>
+        </ul>  </div>
 </div>
 
 </nav>
@@ -123,9 +129,19 @@
             <i class="fa fa-leaf fa-stack-1x fa-inverse"></i>
           </span> 
           Ambiente</h1></div><br>
-          <p class="lead">Lo sviluppo intelligente è ecologicamente sostenibile. Sono cinque gli assi in cui si articolano le proposte di Sbilanciamoci! sull’ambiente e la sostenibilità dello sviluppo, con un totale di entrate statali pari a 2,6 miliardi di euro e uscite per poco meno di 2 miliardi. In primo luogo si propone una sensibile riduzione, pari a 1,5 miliardi di euro, degli stanziamenti pubblici per le grandi opere – come Tav e Mose – che sono costosissime e altamente impattanti, e di destinare invece 1 miliardo di euro a investimenti capillari su piccole e medie opere utili per il Paese. In secondo luogo, si chiede di attuare una strategia di adattamento ai cambiamenti energetici e climatici fondata sull’abbattimento delle emissioni di gas climalteranti e l’adozione di scelte energetiche lungimiranti e responsabili. Sbilanciamoci! propone di implementare diverse misure, tra cui una tassazione dei veicoli legata all’emissione di CO2 che colpisca i veicoli più potenti ed ecologicamente inefficienti come i Suv (500 milioni di entrate in più per lo Stato) e un sistema di incentivi rivolto a famiglie e piccole e medie imprese per l’installazione di impianti fotovoltaici (200 milioni di investimento). In terzo luogo occorre attuare, con uno stanziamento di 500 milioni, un piano di adattamento ai cambiamenti climatici e di manutenzione del territorio, puntando sulla prevenzione, il riassetto idrogeologico, il recupero e la riqualificazione di suolo urbanizzato, la delocalizzazione di immobili in zone a rischio. Inoltre, si chiede un aumento dei fondi destinati alla tutela e alla valorizzazione della biodiversità e del paesaggio. Infine, Sbilanciamoci! richiede un deciso intervento per limitare la produzione dei rifiuti urbani, ridurne il conferimento in discarica e aumentare il tasso di raccolta differenziata. A questo fine, si propone una rimodulazione dell’ecotassa sui rifiuti che porterebbe a maggiori entrate per oltre 400 milioni di euro.
+          <p class="lead"><strong>Lo sviluppo intelligente è ecologicamente sostenibile.</strong>Sono cinque gli assi in cui si articolano le proposte di Sbilanciamoci! sull’ambiente e la sostenibilità dello sviluppo, con un totale di entrate statali pari a 2,6 miliardi di euro e uscite per poco meno di 2 miliardi. In primo luogo si propone una sensibile riduzione, pari a 1,5 miliardi di euro, degli stanziamenti pubblici per le grandi opere – come Tav e Mose – che sono costosissime e altamente impattanti, e di destinare invece 1 miliardo di euro a investimenti capillari su piccole e medie opere utili per il Paese. In secondo luogo, si chiede di attuare una strategia di adattamento ai cambiamenti energetici e climatici fondata sull’abbattimento delle emissioni di gas climalteranti e l’adozione di scelte energetiche lungimiranti e responsabili. Sbilanciamoci! propone di implementare diverse misure, tra cui una tassazione dei veicoli legata all’emissione di CO2 che colpisca i veicoli più potenti ed ecologicamente inefficienti come i Suv (500 milioni di entrate in più per lo Stato) e un sistema di incentivi rivolto a famiglie e piccole e medie imprese per l’installazione di impianti fotovoltaici (200 milioni di investimento). In terzo luogo occorre attuare, con uno stanziamento di 500 milioni, un piano di adattamento ai cambiamenti climatici e di manutenzione del territorio, puntando sulla prevenzione, il riassetto idrogeologico, il recupero e la riqualificazione di suolo urbanizzato, la delocalizzazione di immobili in zone a rischio. Inoltre, si chiede un aumento dei fondi destinati alla tutela e alla valorizzazione della biodiversità e del paesaggio. Infine, Sbilanciamoci! richiede un deciso intervento per limitare la produzione dei rifiuti urbani, ridurne il conferimento in discarica e aumentare il tasso di raccolta differenziata. A questo fine, si propone una rimodulazione dell’ecotassa sui rifiuti che porterebbe a maggiori entrate per oltre 400 milioni di euro.
+  
+
+
           </p>
-          </div>
+          </div> <div id="scaricatab">
+                <!-- <span class="fa-stack">
+                <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                <i class="fa fa-balance-scale fa-stack-1x fa-inverse"></i></span></h1> -->
+                <!-- <a href="#"><img src="./img/scarica_sbilanciamoci.png"></a> -->
+                <a href="/rapporto2016/ambiente.pdf" style="text-decoration: none" class="scarica">Scarica la sezione del Rapporto su Ambiente</a>
+            </div>   
+
         </div>
 
       </div>    
@@ -174,9 +190,10 @@
    </div>
 
    <hr>
-   <footer>
+<footer>
  <p class="text-center" >
-  <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Licenza Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a> <span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Il Rapporto <i>Come usare la spesa pubblica per i diritti, la pace e l’ambiente</i> è un progetto di</span> <a xmlns:cc="http://creativecommons.org/ns#" href="http://sbilanciamoci.org" property="cc:attributionName" rel="cc:attributionURL"> <img src="http://www.sbilanciamoci.org/images/logo.gif" style="height: 25px;" /></a>. Questo sito è stato realizzato e donato da <a href="http://ondata.it" target><img src="./img/logo_onData.png" style="height: 15px;" /></a>. <br>I contenuti sono distrubiti con Licenza <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribuzione - Condividi allo stesso modo 4.0 Internazionale</a>.
+  <span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Il Rapporto <i>Come usare la spesa pubblica per i diritti, la pace e l’ambiente</i> è un progetto di</span> <a xmlns:cc="http://creativecommons.org/ns#" href="http://sbilanciamoci.org" property="cc:attributionName" rel="cc:attributionURL"> <img src="http://www.sbilanciamoci.org/images/logo.gif" style="height: 25px;" /></a>.
+Questo sito è stato realizzato e donato da <a href="http://ondata.it" target><img src="./img/logo_onData.png" style="height: 15px;" /></a>.  </p><p class="text-center" ><a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img class="alignleft" alt="Licenza Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a> I contenuti sono distrubiti con Licenza <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribuzione - Condividi allo stesso modo 4.0 Internazionale</a>.
 </p>
 </footer>
 
