--- a/lavoro_reddito.html
+++ b/lavoro_reddito.html
@@ -83,27 +83,34 @@
 
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <div class="container">
-          <ul class="nav navbar-nav dropdown">
-                    <li >
+         <ul class="nav navbar-nav dropdown">
+                    <li>
                         <a href="./index.html">Home</a>
                     </li>
                     <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Proposte
+                        <a class="dropdown-toggle"  data-toggle="dropdown" href="#">Proposte
                         <span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li><a href="./fisco_finanza.html">Fisco e finanza</a></li>
-                                <li class="active"><a href="./lavoro_reddito.html">Lavoro e reddito</a></li>
+                                <li><a href="./lavoro_reddito.html">Lavoro e reddito</a></li>
                                 <li><a href="./cultura_conoscenza.html">Cultura e conoscenza</a></li>
                                 <li><a href="./ambiente.html">Ambiente e Sviluppo sostenibile</a></li>
                                 <li><a href="./welfare.html">Welfare e diritti</a></li>
                                 <li><a href="./pace_disarmo_cooperazione.html">Cooperazione, pace, disarmo</a></li>
                                 <li><a href="./altra_economia.html">Altraeconomia</a></li> 
-                                <li><a href="./tutte.html">Tutte le proposte</a></li> 
                             </ul>
                     <li>
-                        <a href="./infografiche.html">Infografiche</a>
+                        <a href="./infografica.html">Infografica</a>
+<li>
+                        <a href="./analisi_e_dati.html">Analisi e dati</a>
+                    </li>                    </li>
+
                     </li>
-                    </li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+         <li>
+          <a href="http://Sbilanciamoci.org" target="_blank">Sbilanciamoci.org </a>
+        </li>
         </ul>
   </div>
 </div>
@@ -123,9 +130,17 @@
             <i class="fa fa-wrench fa-stack-1x fa-inverse"></i>
           </span> 
           Lavoro e reddito</h1></div><br>
-          <p class="lead">Ripartire dal reddito e dalla buona occupazione. Alla luce della crisi economico-finanziaria che ha segnato gli ultimi anni causando un aumento della disoccupazione e della povertà, e alla luce delle grandi trasformazioni che hanno interessato il sistema economico globale, i processi produttivi e la struttura del mercato del lavoro, è giunto il momento di ripensare congiuntamente e in modo organico le nostre politiche del e sul lavoro e il nostro sistema di welfare: siamo infatti l’unico Paese in Europa, insieme alla Grecia, a non avere alcuna forma di sostegno al reddito. A questo proposito, Sbilanciamoci! propone di introdurre la sperimentazione di una misura strutturale di sostegno al reddito, del costo di 11 miliardi di euro, che consenta di vivere in modo dignitoso a chi non è entrato nel mercato del lavoro, ne è uscito prematuramente o ne fa parte in un modo tale da non assicurargli un’entrata sufficiente. La misura è rivolta a disoccupati senza altri ammortizzatori sociali, inoccupati, lavoratori precariamente occupati, sottoccupati, soggetti riconosciuti inabili al lavoro, Neet, working poor, il cui reddito lordo non sia superiore a 8.000 euro annui (e con un reddito familiare non superiore a 15.000 euro). L’ammontare individuale del beneficio del reddito minimo garantito è di 7.200 euro annui, circa 600 euro mensili. E la vasta platea dei beneficiari di questa misura riguarda circa un milione e mezzo di persone. Sul fronte del lavoro, inoltre, Sbilanciamoci! propone di adottare un piano dal costo di 1 miliardo di euro che assicuri occupazione di alta qualità per 50mila persone, favorendo al contempo lo spostamento della nostra base industriale verso i settori tecnologicamente più avanzati e remunerativi.
+          <p class="lead"><strong>Ripartire dal reddito e dalla buona occupazione.</strong> Alla luce della crisi economico-finanziaria che ha segnato gli ultimi anni causando un aumento della disoccupazione e della povertà, e alla luce delle grandi trasformazioni che hanno interessato il sistema economico globale, i processi produttivi e la struttura del mercato del lavoro, è giunto il momento di ripensare congiuntamente e in modo organico le nostre politiche del e sul lavoro e il nostro sistema di welfare: siamo infatti l’unico Paese in Europa, insieme alla Grecia, a non avere alcuna forma di sostegno al reddito. A questo proposito, Sbilanciamoci! propone di introdurre la sperimentazione di una misura strutturale di sostegno al reddito, del costo di 11 miliardi di euro, che consenta di vivere in modo dignitoso a chi non è entrato nel mercato del lavoro, ne è uscito prematuramente o ne fa parte in un modo tale da non assicurargli un’entrata sufficiente. La misura è rivolta a disoccupati senza altri ammortizzatori sociali, inoccupati, lavoratori precariamente occupati, sottoccupati, soggetti riconosciuti inabili al lavoro, Neet, working poor, il cui reddito lordo non sia superiore a 8.000 euro annui (e con un reddito familiare non superiore a 15.000 euro). L’ammontare individuale del beneficio del reddito minimo garantito è di 7.200 euro annui, circa 600 euro mensili. E la vasta platea dei beneficiari di questa misura riguarda circa un milione e mezzo di persone. Sul fronte del lavoro, inoltre, Sbilanciamoci! propone di adottare un piano dal costo di 1 miliardo di euro che assicuri occupazione di alta qualità per 50mila persone, favorendo al contempo lo spostamento della nostra base industriale verso i settori tecnologicamente più avanzati e remunerativi.
+
           </p>
           </div>
+  <div id="scaricatab">
+                <!-- <span class="fa-stack">
+                <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                <i class="fa fa-balance-scale fa-stack-1x fa-inverse"></i></span></h1> -->
+                <!-- <a href="#"><img src="./img/scarica_sbilanciamoci.png"></a> -->
+                <a href="/rapporto2016/lavoro_reddito.pdf" style="text-decoration: none" class="scarica">Scarica la sezione del Rapporto su Welfare e diritti</a>
+            </div>
         </div>
 
       </div>    
@@ -176,10 +191,10 @@
    <hr>
    <footer>
  <p class="text-center" >
-  <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Licenza Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a> <span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Il Rapporto <i>Come usare la spesa pubblica per i diritti, la pace e l’ambiente</i> è un progetto di</span> <a xmlns:cc="http://creativecommons.org/ns#" href="http://sbilanciamoci.org" property="cc:attributionName" rel="cc:attributionURL"> <img src="http://www.sbilanciamoci.org/images/logo.gif" style="height: 25px;" /></a>. Questo sito è stato realizzato e donato da <a href="http://ondata.it" target><img src="./img/logo_onData.png" style="height: 15px;" /></a>. <br>I contenuti sono distrubiti con Licenza <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribuzione - Condividi allo stesso modo 4.0 Internazionale</a>.
+  <span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Il Rapporto <i>Come usare la spesa pubblica per i diritti, la pace e l’ambiente</i> è un progetto di</span> <a xmlns:cc="http://creativecommons.org/ns#" href="http://sbilanciamoci.org" property="cc:attributionName" rel="cc:attributionURL"> <img src="http://www.sbilanciamoci.org/images/logo.gif" style="height: 25px;" /></a>.
+Questo sito è stato realizzato e donato da <a href="http://ondata.it" target><img src="./img/logo_onData.png" style="height: 15px;" /></a>.  </p><p class="text-center" ><a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img class="alignleft" alt="Licenza Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a> I contenuti sono distrubiti con Licenza <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribuzione - Condividi allo stesso modo 4.0 Internazionale</a>.
 </p>
 </footer>
-
 </div>
 <script>
 $(document).ready(function(){
