--- a/pace_disarmo_cooperazione.html
+++ b/pace_disarmo_cooperazione.html
@@ -84,12 +84,12 @@
 
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <div class="container">
-          <ul class="nav navbar-nav dropdown">
-                    <li >
+             <ul class="nav navbar-nav dropdown">
+                    <li>
                         <a href="./index.html">Home</a>
                     </li>
                     <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Proposte
+                        <a class="dropdown-toggle"  data-toggle="dropdown" href="#">Proposte
                         <span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li><a href="./fisco_finanza.html">Fisco e finanza</a></li>
@@ -97,14 +97,21 @@
                                 <li><a href="./cultura_conoscenza.html">Cultura e conoscenza</a></li>
                                 <li><a href="./ambiente.html">Ambiente e Sviluppo sostenibile</a></li>
                                 <li><a href="./welfare.html">Welfare e diritti</a></li>
-                                <li class="active"><a href="./pace_disarmo_cooperazione.html">Cooperazione, pace, disarmo</a></li>
+                                <li><a href="./pace_disarmo_cooperazione.html">Cooperazione, pace, disarmo</a></li>
                                 <li><a href="./altra_economia.html">Altraeconomia</a></li> 
-								<li><a href="./tutte.html">Tutte le proposte</a></li> 
                             </ul>
                     <li>
-                        <a href="./infografiche.html">Infografiche</a>
+                        <a href="./infografica.html">Infografica</a>
+<li>
+                        <a href="./analisi_e_dati.html">Analisi e dati</a>
+                    </li>                    </li>
+
                     </li>
-                    </li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+         <li>
+          <a href="http://Sbilanciamoci.org" target="_blank">Sbilanciamoci.org </a>
+        </li>
         </ul>
   </div>
 </div>
@@ -123,10 +130,20 @@
             <i class="fa fa-circle fa-stack-2x text-primary"></i>
             <i class="icon-noun_122924_cc fa-stack-1x fa-inverse"></i>
           </span> 
-          Pace, disarmo e cooperazione</h1></div><br>
-          <p class="lead">In una fase storica e geopolitica come quella attuale, l’obiettivo di ridurre la spesa militare e investire sulle politiche di pace e cooperazione appare l’unico realmente praticabile per rimuovere in profondità le cause scatenanti dell’odio e della violenza tra i popoli e per contrastare la spirale distruttiva dell’autoritarismo, della corsa agli armamenti e della militarizzazione che si sta affermando all’interno delle nostre società. Sbilanciamoci! propone a tal fine di operare una riduzione delle spese militari, con un risparmio per la finanza pubblica di più di 4,5 miliardi di euro, sulla base di tre grandi misure: la riduzione del livello degli effettivi delle nostre Forze armate a 150mila unità e la contestuale eliminazione dell’istituto dell’ausiliaria, la diminuzione degli investimenti per i Programmi d’armamento attraverso l’azzeramento dei fondi iscritti al ministero per lo Sviluppo economico e messi a disposizione del ministero della Difesa – cosa che comporterebbe la cancellazione dell’acquisto dei cacciabombardieri F-35 e dei sommergibili U-212 –, il ritiro dalle missioni militari all’estero di chiara valenza aggressiva. Una parte delle risorse risparmiate attraverso la riduzione della spesa militare, quasi 500 milioni di euro, potrebbe essere utilizzata per finanziare politiche di pace e cooperazione internazionale e per una difesa civile e nonviolenta, con il potenziamento dell’Agenzia Italiana per la Cooperazione allo Sviluppo, l’adeguamento delle risorse per il Servizio Civile Universale che consenta un ampliamento e un’ulteriore qualificazione degli avvii di volontari, l’implementazione dei Corpi Civili di Pace, la creazione di un Istituto per la Pace e il Disarmo, la riconversione a fini civili dell’industria a produzione militare e di alcune servitù militari situate nelle aree più povere del territorio italiano per dar vita a progetti di sviluppo locale.
+          Cooperazione, pace e disarmo</h1></div><br>
+          <p class="lead">
+In una fase storica e geopolitica come quella attuale, l’obiettivo di <strong>ridurre la spesa militare e investire sulle politiche di pace e cooperazione </strong>appare l’unico realmente praticabile per rimuovere in profondità le cause scatenanti dell’odio e della violenza tra i popoli e per contrastare la spirale distruttiva dell’autoritarismo, della corsa agli armamenti e della militarizzazione che si sta affermando all’interno delle nostre società. Sbilanciamoci! propone a tal fine di operare una riduzione delle spese militari, con un risparmio per la finanza pubblica di più di 4,5 miliardi di euro, sulla base di tre grandi misure: la riduzione del livello degli effettivi delle nostre Forze armate a 150mila unità e la contestuale eliminazione dell’istituto dell’ausiliaria, la diminuzione degli investimenti per i Programmi d’armamento attraverso l’azzeramento dei fondi iscritti al ministero per lo Sviluppo economico e messi a disposizione del ministero della Difesa – cosa che comporterebbe la cancellazione dell’acquisto dei cacciabombardieri F-35 e dei sommergibili U-212 –, il ritiro dalle missioni militari all’estero di chiara valenza aggressiva. Una parte delle risorse risparmiate attraverso la riduzione della spesa militare, quasi 500 milioni di euro, potrebbe essere utilizzata per finanziare politiche di pace e cooperazione internazionale e per una difesa civile e nonviolenta, con il potenziamento dell’Agenzia Italiana per la Cooperazione allo Sviluppo, l’adeguamento delle risorse per il Servizio Civile Universale che consenta un ampliamento e un’ulteriore qualificazione degli avvii di volontari, l’implementazione dei Corpi Civili di Pace, la creazione di un Istituto per la Pace e il Disarmo, la riconversione a fini civili dell’industria a produzione militare e di alcune servitù militari situate nelle aree più povere del territorio italiano per dar vita a progetti di sviluppo locale.
+
+
           </p>
           </div>
+   <div id="scaricatab">
+                <!-- <span class="fa-stack">
+                <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                <i class="fa fa-balance-scale fa-stack-1x fa-inverse"></i></span></h1> -->
+                <!-- <a href="#"><img src="./img/scarica_sbilanciamoci.png"></a> -->
+                <a href="/rapporto2016/cooperazione_pace_e_disarmo.pdf" style="text-decoration: none" class="scarica">Scarica la sezione del Rapporto su Cooperazione, pace e disarmo</a>
+            </div> 
         </div>
 
       </div>    
@@ -175,11 +192,13 @@
    </div>
 
    <hr>
-   <footer>
+<footer>
  <p class="text-center" >
-  <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Licenza Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a> <span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Il Rapporto <i>Come usare la spesa pubblica per i diritti, la pace e l’ambiente</i> è un progetto di</span> <a xmlns:cc="http://creativecommons.org/ns#" href="http://sbilanciamoci.org" property="cc:attributionName" rel="cc:attributionURL"> <img src="http://www.sbilanciamoci.org/images/logo.gif" style="height: 25px;" /></a>. Questo sito è stato realizzato e donato da <a href="http://ondata.it" target><img src="./img/logo_onData.png" style="height: 15px;" /></a>. <br>I contenuti sono distrubiti con Licenza <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribuzione - Condividi allo stesso modo 4.0 Internazionale</a>.
+  <span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Il Rapporto <i>Come usare la spesa pubblica per i diritti, la pace e l’ambiente</i> è un progetto di</span> <a xmlns:cc="http://creativecommons.org/ns#" href="http://sbilanciamoci.org" property="cc:attributionName" rel="cc:attributionURL"> <img src="http://www.sbilanciamoci.org/images/logo.gif" style="height: 25px;" /></a>.
+Questo sito è stato realizzato e donato da <a href="http://ondata.it" target><img src="./img/logo_onData.png" style="height: 15px;" /></a>.  </p><p class="text-center" ><a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img class="alignleft" alt="Licenza Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a> I contenuti sono distrubiti con Licenza <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribuzione - Condividi allo stesso modo 4.0 Internazionale</a>.
 </p>
 </footer>
+
 
 </div>
 <script>
