--- a/cultura_conoscenza.html
+++ b/cultura_conoscenza.html
@@ -84,26 +84,33 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <div class="container">
           <ul class="nav navbar-nav dropdown">
-                    <li >
+                    <li>
                         <a href="./index.html">Home</a>
                     </li>
                     <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Proposte
+                        <a class="dropdown-toggle"  data-toggle="dropdown" href="#">Proposte
                         <span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li><a href="./fisco_finanza.html">Fisco e finanza</a></li>
                                 <li><a href="./lavoro_reddito.html">Lavoro e reddito</a></li>
-                                <li class="active"><a href="./cultura_conoscenza.html">Cultura e conoscenza</a></li>
+                                <li><a href="./cultura_conoscenza.html">Cultura e conoscenza</a></li>
                                 <li><a href="./ambiente.html">Ambiente e Sviluppo sostenibile</a></li>
                                 <li><a href="./welfare.html">Welfare e diritti</a></li>
                                 <li><a href="./pace_disarmo_cooperazione.html">Cooperazione, pace, disarmo</a></li>
                                 <li><a href="./altra_economia.html">Altraeconomia</a></li> 
-								<li><a href="./tutte.html">Tutte le proposte</a></li> 
                             </ul>
                     <li>
-                        <a href="./infografiche.html">Infografiche</a>
+                        <a href="./infografica.html">Infografica</a>
+<li>
+                        <a href="./analisi_e_dati.html">Analisi e dati</a>
+                    </li>                    </li>
+
                     </li>
-                    </li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+         <li>
+          <a href="http://Sbilanciamoci.org" target="_blank">Sbilanciamoci.org </a>
+        </li>
         </ul>
   </div>
 </div>
@@ -123,10 +130,18 @@
             <i class="fa fa-book fa-stack-1x fa-inverse"></i>
           </span> 
           Cultura e conoscenza</h1></div><br>
-          <p class="lead">Cinque miliardi di euro per rimettere al centro i saperi e rilanciare la cultura e l’istruzione pubblica. Sono questi gli obiettivi e il costo complessivo delle proposte di Sbilanciamoci! in materia di politiche culturali, scuola, università e ricerca. Tra le principali misure previste all’interno di questi capitoli: un consistente investimento sull’edilizia scolastica e universitaria per garantire maggiore e migliore disponibilità, sicurezza e agibilità di spazi e strutture per l’insegnamento, l’apprendimento e l’alloggio degli studenti; il forte aumento delle risorse destinate al Fondo per il miglioramento dell’offerta formativa, al Fondo di finanziamento ordinario e al Fondo integrativo statale, al fine di arricchire e potenziare la didattica e di assicurare le condizioni minime di esigibilità del diritto allo studio; l’adozione di un piano straordinario per l’assunzione di 5mila ricercatori universitari a tempo determinato nel 2016; la riforma della tassazione universitaria centrata sull’istituzione di una “no tax area” per chi dichiara meno di 23mila euro di Isee; lo stanziamento di risorse integrative sia per il Fondo unico per lo spettacolo sia per la promozione dell’arte e dell’architettura contemporanee, in modo da incentivare la produzione, la diffusione e l’accesso alle varie forme di espressione artistica e culturale, soprattutto da parte delle giovani generazioni; la definizione e l’implementazione dei Livelli essenziali delle prestazioni culturali affinché tutti possano realmente accedere ai beni e alle attività culturali (prevedendo anche l’istituzione di uno specifico regime di detrazione fiscale), l’offerta culturale sia potenziata in particolare là dove è più carente e gli operatori culturali siano messi in grado di svolgere al meglio il loro lavoro.
+          <p class="lead">Cinque miliardi di euro <strong>per rimettere al centro i saperi e rilanciare la cultura e l’istruzione pubblica.</strong> Sono questi gli obiettivi e il costo complessivo delle proposte di Sbilanciamoci! in materia di politiche culturali, scuola, università e ricerca. Tra le principali misure previste all’interno di questi capitoli: un consistente investimento sull’edilizia scolastica e universitaria per garantire maggiore e migliore disponibilità, sicurezza e agibilità di spazi e strutture per l’insegnamento, l’apprendimento e l’alloggio degli studenti; il forte aumento delle risorse destinate al Fondo per il miglioramento dell’offerta formativa, al Fondo di finanziamento ordinario e al Fondo integrativo statale, al fine di arricchire e potenziare la didattica e di assicurare le condizioni minime di esigibilità del diritto allo studio; l’adozione di un piano straordinario per l’assunzione di 5mila ricercatori universitari a tempo determinato nel 2016; la riforma della tassazione universitaria centrata sull’istituzione di una “no tax area” per chi dichiara meno di 23mila euro di Isee; lo stanziamento di risorse integrative sia per il Fondo unico per lo spettacolo sia per la promozione dell’arte e dell’architettura contemporanee, in modo da incentivare la produzione, la diffusione e l’accesso alle varie forme di espressione artistica e culturale, soprattutto da parte delle giovani generazioni; la definizione e l’implementazione dei Livelli essenziali delle prestazioni culturali affinché tutti possano realmente accedere ai beni e alle attività culturali (prevedendo anche l’istituzione di uno specifico regime di detrazione fiscale), l’offerta culturale sia potenziata in particolare là dove è più carente e gli operatori culturali siano messi in grado di svolgere al meglio il loro lavoro.
+
           </p>
           </div>
-        </div>
+ <div id="scaricatab">
+                <!-- <span class="fa-stack">
+                <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                <i class="fa fa-balance-scale fa-stack-1x fa-inverse"></i></span></h1> -->
+                <!-- <a href="#"><img src="./img/scarica_sbilanciamoci.png"></a> -->
+                <a href="/rapporto2016/cultura_conoscenza.pdf" style="text-decoration: none" class="scarica">Scarica la sezione del Rapporto su Cultura e conoscenza</a>
+            </div>         
+</div>
 
       </div>    
 
@@ -174,11 +189,13 @@
    </div>
 
    <hr>
-   <footer>
+<footer>
  <p class="text-center" >
-  <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Licenza Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a> <span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Il Rapporto <i>Come usare la spesa pubblica per i diritti, la pace e l’ambiente</i> è un progetto di</span> <a xmlns:cc="http://creativecommons.org/ns#" href="http://sbilanciamoci.org" property="cc:attributionName" rel="cc:attributionURL"> <img src="http://www.sbilanciamoci.org/images/logo.gif" style="height: 25px;" /></a>. Questo sito è stato realizzato e donato da <a href="http://ondata.it" target><img src="./img/logo_onData.png" style="height: 15px;" /></a>. <br>I contenuti sono distrubiti con Licenza <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribuzione - Condividi allo stesso modo 4.0 Internazionale</a>.
+  <span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Il Rapporto <i>Come usare la spesa pubblica per i diritti, la pace e l’ambiente</i> è un progetto di</span> <a xmlns:cc="http://creativecommons.org/ns#" href="http://sbilanciamoci.org" property="cc:attributionName" rel="cc:attributionURL"> <img src="http://www.sbilanciamoci.org/images/logo.gif" style="height: 25px;" /></a>.
+Questo sito è stato realizzato e donato da <a href="http://ondata.it" target><img src="./img/logo_onData.png" style="height: 15px;" /></a>.  </p><p class="text-center" ><a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img class="alignleft" alt="Licenza Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a> I contenuti sono distrubiti con Licenza <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribuzione - Condividi allo stesso modo 4.0 Internazionale</a>.
 </p>
 </footer>
+
 
 </div>
 <script>
