--- a/fisco_finanza.html
+++ b/fisco_finanza.html
@@ -83,27 +83,34 @@
 
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <div class="container">
-          <ul class="nav navbar-nav dropdown">
-                    <li >
+        <ul class="nav navbar-nav dropdown">
+                    <li>
                         <a href="./index.html">Home</a>
                     </li>
                     <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Proposte
+                        <a class="dropdown-toggle"  data-toggle="dropdown" href="#">Proposte
                         <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li class="active"><a href="./fisco_finanza.html">Fisco e finanza</a></li>
+                                <li><a href="./fisco_finanza.html">Fisco e finanza</a></li>
                                 <li><a href="./lavoro_reddito.html">Lavoro e reddito</a></li>
                                 <li><a href="./cultura_conoscenza.html">Cultura e conoscenza</a></li>
                                 <li><a href="./ambiente.html">Ambiente e Sviluppo sostenibile</a></li>
                                 <li><a href="./welfare.html">Welfare e diritti</a></li>
                                 <li><a href="./pace_disarmo_cooperazione.html">Cooperazione, pace, disarmo</a></li>
                                 <li><a href="./altra_economia.html">Altraeconomia</a></li> 
-								<li><a href="./tutte.html">Tutte le proposte</a></li> 
                             </ul>
                     <li>
-                        <a href="./infografiche.html">Infografiche</a>
+                        <a href="./infografica.html">Infografica</a>
+<li>
+                        <a href="./analisi_e_dati.html">Analisi e dati</a>
+                    </li>                    </li>
+
                     </li>
-                    </li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+         <li>
+          <a href="http://Sbilanciamoci.org" target="_blank">Sbilanciamoci.org </a>
+        </li>
         </ul>
   </div>
 </div>
@@ -123,12 +130,20 @@
             <i class="fa fa-euro fa-stack-1x fa-inverse"></i>
           </span> 
           Fisco e finanza</h1></div><br>
-          <p class="lead"><strong>Un fisco equo contro rendite, speculazione finanziaria e privilegi</strong>. Il fisco è essenziale per finanziare i servizi pubblici, il problema è garantire equità e progressività. In un contesto in cui la politica fiscale si è mossa in direzioni molto lontane dal dettato costituzionale, Sbilanciamoci! prevede con la sua manovra fiscale di redistribuire il reddito e la ricchezza al fine di diminuire le diseguaglianze sociali. Il complesso delle proposte alimenta le casse dello Stato con circa 24 miliardi di euro, di cui circa 8 finalizzati a ripartire il carico fiscale chiedendo di più a chi ha di più e prelevando di meno da chi ha di meno. Tra i principali interventi – improntati a giustizia economica e progressività dell’imposizione fiscale – vi sono l’introduzione di una “vera” tassa sulle transazioni finanziarie, la rinuncia all’abolizione della Tasi prevista nel Ddl di Stabilità 2016, l’abolizione della cedolare secca sugli affitti a canone libero, il mantenimento della riduzione dell’Ires a partire dal 2017. A questi provvedimenti si accompagna una manovra sulla tassazione Irpef che riduce di 1 punto le aliquote sul I e II scaglione di reddito e aumenta invece l’aliquota dal 41 al 44% sul IV scaglione (da 50.001 a 75.000 euro), dal 43 al 47,5% sul V scaglione (tra i 75.000 e i 100.000 euro) e la porta al 51,5% per i redditi superiori ai 100.000 euro, con corrispondente creazione di un VI scaglione. Si prevede poi l’assoggettamento all’Irpef delle rendite finanziarie e un’imposta complessiva sul patrimonio finanziario di famiglie e imprese con una struttura ad aliquote progressive, che esoneri di fatto dal pagamento i ceti medio-bassi e incida sui grandi patrimoni. Guardando al rilancio della domanda interna e al miglioramento della condizione economico-contributiva dei meno abbienti, si propone infine la riduzione di un punto percentuale dell’aliquota massiva dell’Iva dal 22 al 21% e l’aumento in sede Irpef di 100 euro delle detrazioni sui redditi da lavoro dipendente e da pensioni.          
+          <p class="lead"><strong>Un fisco equo contro rendite, speculazione finanziaria e privilegi.</strong> Il fisco è essenziale per finanziare i servizi pubblici, il problema è garantire equità e progressività. In un contesto in cui la politica fiscale si è mossa in direzioni molto lontane dal dettato costituzionale, Sbilanciamoci! prevede con la sua manovra fiscale di redistribuire il reddito e la ricchezza al fine di diminuire le diseguaglianze sociali. Il complesso delle proposte alimenta le casse dello Stato con circa 24 miliardi di euro, di cui circa 8 finalizzati a ripartire il carico fiscale chiedendo di più a chi ha di più e prelevando di meno da chi ha di meno. Tra i principali interventi – improntati a giustizia economica e progressività dell’imposizione fiscale – vi sono l’introduzione di una “vera” tassa sulle transazioni finanziarie, la rinuncia all’abolizione della Tasi prevista nel Ddl di Stabilità 2016, l’abolizione della cedolare secca sugli affitti a canone libero, il mantenimento della riduzione dell’Ires a partire dal 2017. A questi provvedimenti si accompagna una manovra sulla tassazione Irpef che riduce di 1 punto le aliquote sul I e II scaglione di reddito e aumenta invece l’aliquota dal 41 al 44% sul IV scaglione (da 50.001 a 75.000 euro), dal 43 al 47,5% sul V scaglione (tra i 75.000 e i 100.000 euro) e la porta al 51,5% per i redditi superiori ai 100.000 euro, con corrispondente creazione di un VI scaglione. Si prevede poi l’assoggettamento all’Irpef delle rendite finanziarie e un’imposta complessiva sul patrimonio finanziario di famiglie e imprese con una struttura ad aliquote progressive, che esoneri di fatto dal pagamento i ceti medio-bassi e incida sui grandi patrimoni. Guardando al rilancio della domanda interna e al miglioramento della condizione economico-contributiva dei meno abbienti, si propone infine la riduzione di un punto percentuale dell’aliquota massiva dell’Iva dal 22 al 21% e l’aumento in sede Irpef di 100 euro delle detrazioni sui redditi da lavoro dipendente e da pensioni.
+        
           </p>
     
 
           </div>
-        </div>
+         <div id="scaricatab">
+                <!-- <span class="fa-stack">
+                <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                <i class="fa fa-balance-scale fa-stack-1x fa-inverse"></i></span></h1> -->
+                <!-- <a href="#"><img src="./img/scarica_sbilanciamoci.png"></a> -->
+                <a href="/rapporto2016/fisco_e_finanza.pdf" style="text-decoration: none" class="scarica">Scarica la sezione del Rapporto su Fisco e finanza</a>
+            </div> 
+</div>
 
       </div>    
 
@@ -179,9 +194,10 @@
 </div>
 </div>
    <hr>
-   <footer>
+<footer>
  <p class="text-center" >
-  <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Licenza Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a> <span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Il Rapporto <i>Come usare la spesa pubblica per i diritti, la pace e l’ambiente</i> è un progetto di</span> <a xmlns:cc="http://creativecommons.org/ns#" href="http://sbilanciamoci.org" property="cc:attributionName" rel="cc:attributionURL"> <img src="http://www.sbilanciamoci.org/images/logo.gif" style="height: 25px;" /></a>. Questo sito è stato realizzato e donato da <a href="http://ondata.it" target><img src="./img/logo_onData.png" style="height: 15px;" /></a>. <br>I contenuti sono distrubiti con Licenza <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribuzione - Condividi allo stesso modo 4.0 Internazionale</a>.
+  <span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Il Rapporto <i>Come usare la spesa pubblica per i diritti, la pace e l’ambiente</i> è un progetto di</span> <a xmlns:cc="http://creativecommons.org/ns#" href="http://sbilanciamoci.org" property="cc:attributionName" rel="cc:attributionURL"> <img src="http://www.sbilanciamoci.org/images/logo.gif" style="height: 25px;" /></a>.
+Questo sito è stato realizzato e donato da <a href="http://ondata.it" target><img src="./img/logo_onData.png" style="height: 15px;" /></a>.  </p><p class="text-center" ><a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img class="alignleft" alt="Licenza Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a> I contenuti sono distrubiti con Licenza <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribuzione - Condividi allo stesso modo 4.0 Internazionale</a>.
 </p>
 </footer>
 
